--- a/css/owl.css
+++ b/css/owl.css
@@ -17,7 +17,7 @@
     position: relative;
     -ms-touch-action: pan-Y; }
   .owl-carousel .owl-stage:after {
-    content: ".";
+    content: "-";
     display: block;
     clear: both;
     visibility: hidden;
